BUT-305 Fixed: Combobox: Option result list isn't visible in a modal panel

--- a/components/src/main/resources/META-INF/resources/butterfaces-css/butterfaces-combobox.css
+++ b/components/src/main/resources/META-INF/resources/butterfaces-css/butterfaces-combobox.css
@@ -5,6 +5,8 @@
     max-width: 900px;
     overflow: auto;
     box-shadow: 2px 2px 5px #ccc;
+    /* ensure that z-index is higher than the modal panel from bootstrap */
+    z-index: 1051;
 }
 
 .butter-component-combobox-resultListContainer {
